--- a/style.css
+++ b/style.css
@@ -33,10 +33,16 @@ body {
 
 .grid-ui {
     display: grid;
-    grid-template-columns: repeat(15, auto);
+    gap: 1.5rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
 }
 
 .grid-ui-item {
-    border-radius: 25px;
-    margin: 5% 150px 5% 150px;
+    border-radius: 8px;
+    margin: 5%;
+}
+
+.grid-ui-item:nth-child(3) {
+    grid-column: span 2;
 }
