--- a/ui/style.css
+++ b/ui/style.css
@@ -46,6 +46,7 @@ body {
 a {
     text-decoration: none !important;
     color: var(--theme-color);
+    font-weight: bold;
 }
 
 .grid-ui {
@@ -104,5 +105,6 @@ img {
 
 #video_information {
     display: inline-block;
-    margin: 3% 15% 0 4%;
+    margin: 3% 0 0 4%;
+    width: 69%;
 }
